# rustfirsttry

./: .env  Cargo.toml
migrations/2020-02-27-035129_create_users/: up.sql
src/: schema.rs
src/models/: user.rs
