[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["Chris Kettenbach <christopher.kettenbach@primitivelogic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-identity = "0.2.1"
actix-cors = "0.2.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
jsonwebtoken = "7.0.1"
bcrypt = "0.6.1"
chrono = { version = "0.4.10", features = ["serde"]}
csrf-token = { git = "https://git@github.com/3dom-co-jp/csrf-token.git", branch="v0.2.x" }
hex = "0.4.2"
env_logger = "0.7.1"
log = "0.4.8"
actix-http = "1.0.1"
diesel_full_text_search = "1.0.1"
itertools = "0.8.2"
juniper = "0.14.2"
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }

[dev-dependencies]
bytes = "0.4"
actix-http-test = "0.2.0"
